--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-/*1. ROOT ========================= */
+/* 1. ROOT ========================= */
 :root {
   --dark-blue: #0a2463;
   --dark-cyan: #247ba0;
@@ -10,10 +10,39 @@
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 body {
   font-family: "Roboto", sans-serif;
-  margin: 0;
-  padding: 0;
+}
+
+div.m-width {
+  margin: 0 auto;
+  max-width: 1200px;
+  padding: 30px;
+  width: 100%;
+}
+
+/* 2. HEADER ========================= */
+header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: auto;
+  max-height: 475px;
+  position: relative;
+  width: 100%;
+}
+header div.m-width {
+  padding-top: 16px;
+}
+header nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: auto;
+  max-height: 70px;
+  width: 100%;
 }
