--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,4 +1,4 @@
-/*1. ROOT ========================= */
+/* 1. ROOT ========================= */
 
 :root {
 	--dark-blue: #0a2463;
@@ -10,10 +10,38 @@
 
 * {
 	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
 }
 
 body {
 	font-family: 'Roboto', sans-serif;
-	margin: 0;
-	padding: 0;
+}
+
+div.m-width {
+	margin: 0 auto;
+	max-width: 1200px;
+	padding: 30px;
+	width: 100%;
+}
+
+/* 2. HEADER ========================= */
+
+header {
+	display: flex;
+	height: auto;
+	max-height: 475px;
+	position: relative;
+	width: 100%;
+
+	div.m-width {
+		padding-top: 16px;
+	}
+
+	nav {
+		display: flex;
+		height: auto;
+		max-height: 70px;
+		width: 100%;
+	}
 }
