--- a/index.pug
+++ b/index.pug
@@ -10,8 +10,7 @@ html(lang="es-CO")
     header
       .m-width
         nav
-          .nav__logo
-            h1 AIRLINE
+          h1.nav__logo AIRLINE
           .nav__menu
             ul
               li
@@ -38,90 +37,90 @@ html(lang="es-CO")
           p.
             Prepare your bags and forget your worries to start enjoying your holidays in this fantastic country
           a.button Buy now
-      main
-        .m-width
-          h3 Offers
-          section
-            article.card#trip-moscow
-              figure
-                img(src="assets/img/moscow.jpg")
-              p.card__title Trip to Moscow
-              p.card__info Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean in nulla mauris.
-                a.card__info__link(href="#") more
-              p.card__price Price $600,86
-            article.card#trip-puerto_rico
-              figure
-                img(src="assets/img/puerto-rico.jpg")
-              p.card__title Trip to Puerto Rico
-              p.card__info Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean in nulla mauris.
-                a.card__info__link(href="#") more
-              p.card__price Price $600,86
-            article.card#trip-honduras
-              figure
-                img(src="assets/img/honduras.jpg")
-              p.card__title Trip to Honduras
-              p.card__info Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean in nulla mauris.
-                a.card__info__link(href="#") more
-              p.card__price Price $600,86
-            section.card-chosen
-              p#chosen-dest
-              .card-chosen__divider
-              p.card_chosen__text
-          section.trip-menu
-            h4 Menu
-            ul.trip-menu__ul
+    main
+      .m-width
+        h3 Offers
+        section
+          article.card#trip-moscow
+            figure
+              img(src="assets/img/moscow.jpg")
+            p.card__title Trip to Moscow
+            p.card__info Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean in nulla mauris.
+              a.card__info__link(href="#") more
+            p.card__price Price $600,86
+          article.card#trip-puerto_rico
+            figure
+              img(src="assets/img/puerto-rico.jpg")
+            p.card__title Trip to Puerto Rico
+            p.card__info Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean in nulla mauris.
+              a.card__info__link(href="#") more
+            p.card__price Price $600,86
+          article.card#trip-honduras
+            figure
+              img(src="assets/img/honduras.jpg")
+            p.card__title Trip to Honduras
+            p.card__info Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean in nulla mauris.
+              a.card__info__link(href="#") more
+            p.card__price Price $600,86
+          section.card-chosen
+            p#chosen-dest
+            .card-chosen__divider
+            p.card_chosen__text
+        section.trip-menu
+          h4 Menu
+          ul.trip-menu__ul
+            li
+              a(href="#") Check-in
+            li
+              a(href="#") Manage My Booking
+            li
+              a(href="#") Search
+            li
+              a(href="#") Destinations
+            li
+              a(href="#") Members
+    footer
+      .m-width
+        section.social-nav
+          p.social-nav__title.
+            Follow us
+          .social-nav__icons
+            figure
+              img.social-nav__icons--facebook(src="assets/img/facebook.svg")
+            figure
+              img.social-nav__icons--instagram(src="assets/img/instagram.svg")
+            figure
+              img.social-nav__icons--twitter(src="assets/img/twitter.svg")
+        section.footer-nav
+          .footer-nav__menu
+            p.footer-nav__menu__title About Us
+            p.footer-nav__menu__text We want to help passengers to reach their destinations.
+          .footer-nav_menu
+            p.footer-nav__menu__title Explore
+            ul.footer-nav__menu__ul
               li
-                a(href="#") Check-in
-              li
-                a(href="#") Manage My Booking
-              li
-                a(href="#") Search
+                a(href="#") Home
               li
                 a(href="#") Destinations
               li
-                a(href="#") Members
-      footer
-        .m-width
-          section.social-nav
-            p.social-nav__title.
-              Follow us
-            .social-nav__icons
-              figure
-                img.social-nav__icons--facebook(src="assets/img/facebook.svg")
-              figure
-                img.social-nav__icons--instagram(src="assets/img/instagram.svg")
-              figure
-                img.social-nav__icons--twitter(src="assets/img/twitter.svg")
-          section.footer-nav
-            .footer-nav__menu
-              p.footer-nav__menu__title About Us
-              p.footer-nav__menu__text We want to help passengers to reach their destinations.
-            .footer-nav_menu
-              p.footer-nav__menu__title Explore
-              ul.footer-nav__menu__ul
-                li
-                  a(href="#") Home
-                li
-                  a(href="#") Destinations
-                li
-                  a(href="#") About
-            .footer-nav__menu
-              p.footer-nav__menu__title Information
-              ul.footer-nav__menu__ul
-                li
-                  a(href="#") More search
-                li
-                  a(href="#") Blog
-                li
-                  a(href="#") Testimonials
-            .footer-nav__menu
-              p.footer-nav__menu__title Services
-              ul.footer-nav__menu__ul
-                li
-                  a(href="#") Manage My Bookings
-                li
-                  a(href="#") Checkin
-                li
-                  a(href="#") Hotel
-                li
-                  a(href="#") Cars
+                a(href="#") About
+          .footer-nav__menu
+            p.footer-nav__menu__title Information
+            ul.footer-nav__menu__ul
+              li
+                a(href="#") More search
+              li
+                a(href="#") Blog
+              li
+                a(href="#") Testimonials
+          .footer-nav__menu
+            p.footer-nav__menu__title Services
+            ul.footer-nav__menu__ul
+              li
+                a(href="#") Manage My Bookings
+              li
+                a(href="#") Checkin
+              li
+                a(href="#") Hotel
+              li
+                a(href="#") Cars
