--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,20 @@
+/*
+
+1. Root
+2. Header
+3. Main
+4. Footer
+
+*/
 /* 1. ROOT ========================= */
 :root {
+  --black: #000000;
   --dark-blue: #0a2463;
   --dark-cyan: #247ba0;
   --dark-gray: #605f5e;
   --main-gray: #707070;
   --main-red: #fb3640;
+  --white: #ffffff;
 }
 
 * {
@@ -14,11 +24,20 @@
   padding: 0;
 }
 
-body {
+html {
+  font-size: 62.5%;
+  scroll-behavior: smooth;
   font-family: "Roboto", sans-serif;
 }
 
 div.m-width {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   margin: 0 auto;
   max-width: 1200px;
   padding: 30px;
@@ -27,22 +46,48 @@ div.m-width {
 
 /* 2. HEADER ========================= */
 header {
+  background-image: url("../img/plane.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  height: auto;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  height: 400px;
   max-height: 475px;
   position: relative;
   width: 100%;
 }
 header div.m-width {
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  height: auto;
   padding-top: 16px;
 }
 header nav {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   height: auto;
   max-height: 70px;
+  width: 100%;
+}
+header nav .nav__logo {
+  color: var(--white);
+  font-size: 3.6rem;
+}
+header div.header__content {
   width: 100%;
 }
