--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -31,6 +31,14 @@ html {
 	font-family: 'Roboto', sans-serif;
 }
 
+a {
+	text-decoration: none;
+}
+
+ul li {
+	list-style: none;
+}
+
 div.m-width {
 	display: flex;
 	flex-direction: column;
@@ -76,5 +84,248 @@ header {
 
 	div.header__content {
 		width: 100%;
+
+		h2 {
+			color: var(--white);
+			font-size: 2.4rem;
+			font-weight: 400;
+			margin-top: 50px;
+			margin-bottom: 5px;
+		}
+
+		p {
+			color: var(--white);
+			font-size: 1.4rem;
+		}
+
+		a.button {
+			align-self: flex-start;
+			background-color: var(--main-red);
+			border-radius: 30px;
+			color: var(--white);
+			display: inline-flex;
+			font-size: 1.8rem;
+			margin-top: 50px;
+			padding: 15px 72px;
+			text-transform: uppercase;
+			width: auto;
+		}
+	}
+}
+
+/* 3. MAIN ========================= */
+
+main {
+	display: flex;
+	flex-direction: column;
+
+	.m-width {
+		padding-bottom: 65px;
+	}
+
+	.main__title {
+		align-content: center;
+		display: flex;
+
+		h3 {
+			color: var(--dark-cyan);
+			font-size: 2rem;
+			font-weight: 700;
+			margin-right: 15px;
+		}
+
+		span.main__title--bar {
+			align-self: center;
+			background-color: var(--dark-gray);
+			height: 2px;
+			opacity: 0.4;
+			width: 100%;
+		}
+	}
+
+	section.card-container {
+		display: grid;
+		gap: 30px;
+		grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
+		padding: 30px 0;
+
+		article.card {
+			align-items: flex-end;
+			background-position: center;
+			background-size: cover;
+			border: 2px solid rgba(10, 36, 99, 0.5);
+			border-radius: 16px;
+			box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.29);
+			color: var(--white);
+			display: flex;
+			height: 240px;
+			overflow: hidden;
+			position: relative;
+			width: 100%;
+
+			.card__container {
+				background-color: rgba(0, 0, 0, 0.6);
+				display: flex;
+				flex-direction: column;
+				height: auto;
+				padding: 9px 16px 13px;
+
+				.card__title {
+					color: inherit;
+					font-size: 1.6rem;
+					font-weight: 300;
+					padding-bottom: 17px;
+				}
+
+				.card__info {
+					color: inherit;
+					font-size: 1.6rem;
+					font-weight: 300;
+					margin-bottom: 30px;
+
+					.card__info__link {
+						color: inherit;
+						margin-left: 5px;
+						text-decoration: underline;
+					}
+				}
+
+				.card__price {
+					color: inherit;
+					font-size: 2rem;
+					font-weight: 700;
+					text-align: right;
+				}
+			}
+		}
+
+		.moscow {
+			background-image: url(../img/moscow.jpg);
+		}
+		.puerto-rico {
+			background-image: url(../img/puerto-rico.jpg);
+		}
+		.honduras {
+			background-image: url(../img/honduras.jpg);
+		}
+	}
+
+	section.trip-menu {
+		border-radius: 15px;
+		box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.19);
+		overflow: hidden;
+		padding-top: 30px;
+
+		h4 {
+			color: var(--dark-gray);
+			font-size: 1.8rem;
+			font-weight: 300;
+			margin-bottom: 20px;
+			text-align: center;
+		}
+
+		ul.trip-menu__ul {
+			display: flex;
+			flex-direction: column;
+			width: 100%;
+
+			li {
+				border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+				position: relative;
+				width: 100%;
+
+				&:last-child {
+					border-bottom: none;
+				}
+
+				a {
+					color: var(--dark-gray);
+					display: block;
+					font-size: 1.6rem;
+					font-weight: 300;
+					padding: 16px 30px 16px 55px;
+					position: relative;
+					width: 100%;
+
+					&::before {
+						border-color: transparent transparent transparent var(--dark-cyan);
+						border-style: solid;
+						border-width: 7.5px 0 7.5px 15px;
+						content: '';
+						height: 0;
+						left: 30px;
+						position: absolute;
+						top: 20px;
+						width: 0;
+					}
+				}
+			}
+		}
+	}
+}
+
+/* 4. FOOTER ========================= */
+
+footer {
+	background-color: var(--dark-blue);
+	padding: 30px 0 50px;
+
+	.m-width {
+		flex-wrap: wrap;
+		flex-direction: column;
+	}
+
+	section {
+		width: 100%;
+
+		.social-nav__title {
+			color: var(--white);
+			font-size: 2rem;
+			margin-bottom: 30px;
+			text-align: center;
+		}
+
+		.social-nav__icons {
+			justify-content: center;
+			display: flex;
+			gap: 20px;
+
+			figure {
+				width: 30px;
+
+				img {
+					width: 100%;
+				}
+			}
+		}
+	}
+
+	.footer-nav__menu {
+		width: 100%;
+
+		.footer-nav__menu__title {
+			color: var(--main-red);
+			font-size: 1.8rem;
+			margin-bottom: 15px;
+			margin-top: 30px;
+		}
+
+		.footer-nav__menu__text {
+			color: var(--white);
+			font-size: 1.4rem;
+			line-height: 1.7rem;
+		}
+
+		.footer-nav__menu__ul {
+			li {
+				margin-bottom: 12px;
+
+				a {
+					color: var(--white);
+					font-size: 1.6rem;
+					font-weight: 400;
+				}
+			}
+		}
 	}
 }
